@@ -1,3 +1,13 @@
+2013-01-22  Frank Farzan  <frankf@chromium.org>
+
+        Add Android instrumentation tests from ChromiumLinux waterfall
+        https://bugs.webkit.org/show_bug.cgi?id=107597
+
+        Reviewed by Ojan Vafai.
+
+        * TestResultServer/static-dashboards/builders.js:
+        (loadBuildersList):
+
 2013-01-21  Kentaro Hara  <haraken@chromium.org>
 
         Implement UIEvent constructor
